--- a/mopj-dashboard/public/index.html
+++ b/mopj-dashboard/public/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MOPJ 예측 및 구매 전략 대시보드</title>
+  <title>롯데케미칼 MOPJ 가격 예측 및 구매 전략 대시보드</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
